Alteracao final do projeto apos instrucoes do tutor

--- a/Projeto SQL - Módulo 36.ipynb
+++ b/Projeto SQL - Módulo 36.ipynb
@@ -948,7 +948,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Conclusão:** Através dessa análise não conseguimos extrair nenhuma informação relevante, as informações inclusive são bem semelhantes, apenas o máximo da idade por sexo que varia um pouco mais."
+    "**Conclusão:** Através dessa análise não conseguimos extrair nenhuma informação relevante, as informações inclusive são bem semelhantes, a idade máxima por sexo que varia um pouco mais."
    ]
   },
   {
@@ -967,7 +967,7 @@
     "    AVG(idade) AS media_idade, \n",
     "    MIN(idade) AS min_idade, \n",
     "    MAX(idade) AS max_idade, \n",
-    "    STDDEV_SAMP(idade) AS std_Padrao_Idade,\n",
+    "    STDDEV_SAMP(idade) AS std_Idade,\n",
     "    AVG(limite_credito) AS media_limite_credito, \n",
     "    MIN(limite_credito) AS min_limite_credito, \n",
     "    MAX(limite_credito) AS max_limite_credito,\n",
